# foerderbande

./: .env.example  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docker/: .env  compose.yaml
docker/volumes/db/: _supabase.sql
docker/volumes/db/init/: init-app-schema.sql
experimental/cobra/: .gitignore  README.md  database.py  justfile  main.py  pyproject.toml  rss_service.py  schemas.py  test_main.http
experimental/cobra/docker/: compose.yaml
experimental/cobra/docker/volumes/postgres/: init.sql
experimental/draftRss/: README.md  compose.yaml  feed_processor.py  feeds.yaml  requirements.txt
experimental/draftRss/postgres/: init.sql
experimental/mamba/: .gitignore  README.md  compose.yaml  package.json  pnpm-lock.yaml
experimental/mamba/docker/: .env  compose.yaml
experimental/mamba/docker/volumes/db/: roles.sql
frontend/foerder-frontend/: package.json
frontend/foerder-frontend/src/components/: CallGrid.tsx
frontend/foerder-frontend/src/hooks/: useFundingCalls.ts
scripts/: create-test-users.mjs
supabase/: docker-compose.yml
supabase/sql-scripts/: init-experimental.sql  init-sources.sql
